# yggdrasyl

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: check.yml  publish.yml  python-format-and-lint.yml  python-pubilsh-package.yml
tests/: test_container.py  test_dependencies.py
yggdrasyl/: __init__.py  _dependencies.py  _errors.py  _utils.py  container.py
