[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "yggdrasyl"
version = "0.1.0"
description = "Simple dependency injection tool"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Ilya Katun", email = "katun.ilya@gmail.com" }]
maintainers = [{ name = "Ilya Katun", email = "katun.ilya@gmail.com" }]

[project.urls]
Repository = "https://github.com/katunilya/yggdrasyl"
Issues = "https://github.com/katunilya/yggdrasyl/issues"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = "--strict-markers --showlocals --verbosity 2"
log_level = "DEBUG"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"

[tool.coverage.run]
omit = ["tests/*"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 100
exclude_lines = [
    "raise NotImplementedError",
    "def __repr__",
    "pragma: no cover",
    "if TYPE_CHECKING",
    "@overload",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
fixable = ["ALL"]
extend-select = ["RUF022"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
combine-as-imports = true
